# ChangeLog for app-office/koffice-libs
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-office/koffice-libs/Attic/ChangeLog,v 1.7 2005/06/21 08:37:05 greg_g Exp $

*koffice-libs-1.4.0 (21 Jun 2005)

  21 Jun 2005; Gregorio Guidi <greg_g@gentoo.org>
  +koffice-libs-1.4.0.ebuild:
  Final release of KOffice 1.4.

  12 Jun 2005; Tom Gall <tgall@gentoo.org>
  office-libs-1.3.5.ebuild:
  added ~ppc64

*koffice-libs-1.4.0_rc1 (03 Jun 2005)

  03 Jun 2005; Gregorio Guidi <greg_g@gentoo.org>
  +koffice-libs-1.4.0_rc1.ebuild:
  Release candidate for new version of KOffice.

  03 May 2005; Herbie Hopkins <herbs@gentoo.org> koffice-libs-1.3.5.ebuild:
  Marked ~amd64.

  09 Apr 2005; Joseph Jezak <josejx@gentoo.org> koffice-libs-1.3.5.ebuild:
  Marked ~ppc for bug #87780.

*koffice-libs-1.3.5 (05 Mar 2005)

  05 Mar 2005; Simone Gotti <motaboy@gentoo.org> koffice-libs-1.3.5.ebuild:
  Stable on x86.
