@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/koffice-libs/Attic/koffice-libs-1.3.5.ebuild,v 1.5 2005/06/13 01:12:20 tgall Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/koffice-libs/Attic/koffice-libs-1.3.5.ebuild,v 1.6 2005/06/22 12:46:41 corsair Exp $
 
 MAXKOFFICEVER=1.3.5
 KMNAME=koffice
@@ -12,7 +12,7 @@ HOMEPAGE="http://www.koffice.org/"
 SRC_URI="$SRC_URI mirror://kde/stable/${KMNAME}/src/${KMNAME}-${PV}.tar.bz2"
 
 LICENSE="GPL-2 LGPL-2"
-KEYWORDS="x86 ~ppc ~amd64 ~ppc64"
+KEYWORDS="~amd64 ~ppc ~ppc64 x86"
 
 IUSE=""
 SLOT="0"
