@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/koffice-libs/Attic/koffice-libs-1.4.0.ebuild,v 1.1 2005/06/21 08:37:05 greg_g Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/koffice-libs/Attic/koffice-libs-1.4.0.ebuild,v 1.2 2005/06/22 12:46:41 corsair Exp $
 
 MAXKOFFICEVER=${PV}
 KMNAME=koffice
@@ -12,7 +12,7 @@ HOMEPAGE="http://www.koffice.org/"
 LICENSE="GPL-2 LGPL-2"
 
 SLOT="0"
-KEYWORDS="~x86 ~ppc ~amd64"
+KEYWORDS="~amd64 ~ppc ~ppc64 ~x86"
 IUSE="doc"
 
 RDEPEND="$(deprange $PV $MAXKOFFICEVER app-office/koffice-data)"
