@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/koffice-meta/Attic/koffice-meta-1.3.5.ebuild,v 1.4 2005/05/03 13:35:06 herbs Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/koffice-meta/Attic/koffice-meta-1.3.5.ebuild,v 1.5 2005/06/22 12:51:22 corsair Exp $
 MAXKOFFICEVER=1.3.5
 
 inherit kde-functions
@@ -9,7 +9,7 @@ HOMEPAGE="http://www.kde.org/"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="x86 ~ppc ~amd64"
+KEYWORDS="~amd64 ~ppc ~ppc64 x86"
 IUSE=""
 
 # Note most packages didn't change between koffice 1.3.4 and 1.3.5
