@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/koffice-meta/Attic/koffice-meta-1.4.0.ebuild,v 1.1 2005/06/21 08:42:21 greg_g Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/koffice-meta/Attic/koffice-meta-1.4.0.ebuild,v 1.2 2005/06/22 12:51:22 corsair Exp $
 
 MAXKOFFICEVER=${PV}
 inherit kde-functions
@@ -10,7 +10,7 @@ HOMEPAGE="http://www.koffice.org/"
 LICENSE="GPL-2"
 
 SLOT="0"
-KEYWORDS="~amd64 ~x86"
+KEYWORDS="~amd64 ~ppc64 ~x86"
 IUSE=""
 
 RDEPEND="$(deprange $PV $MAXKOFFICEVER app-office/karbon)
