@@ -1,6 +1,10 @@
 # ChangeLog for app-office/koffice-meta
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/koffice-meta/Attic/ChangeLog,v 1.7 2005/06/21 08:42:21 greg_g Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/koffice-meta/Attic/ChangeLog,v 1.8 2005/06/22 12:51:22 corsair Exp $
+
+  22 Jun 2005; Markus Rothe <corsair@gentoo.org> koffice-meta-1.3.5.ebuild,
+  koffice-meta-1.4.0.ebuild:
+  Added ~ppc64
 
 *koffice-meta-1.4.0 (21 Jun 2005)
 
