@@ -1,6 +1,10 @@
 # ChangeLog for app-office/koffice-libs
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/koffice-libs/Attic/ChangeLog,v 1.7 2005/06/21 08:37:05 greg_g Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/koffice-libs/Attic/ChangeLog,v 1.8 2005/06/22 12:46:41 corsair Exp $
+
+  22 Jun 2005; Markus Rothe <corsair@gentoo.org> koffice-libs-1.3.5.ebuild,
+  koffice-libs-1.4.0.ebuild:
+  Added ~ppc64
 
 *koffice-libs-1.4.0 (21 Jun 2005)
 
